--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Control hue bulb from zoom event",
   "main": "index.js",
   "scripts": {
-    "test": "yarn test"
+    "test": "yarn test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,6 @@
   },
   "homepage": "https://github.com/hectorscout/zoom2hue#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "node-oauth2-server": "^2.4.0",
-    "pg": "^8.3.2"
+    "express": "^4.17.1"
   }
 }
