--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "zoom2hue",
   "version": "1.0.0",
   "description": "Control hue bulb from zoom event",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "yarn test",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
